feat(CI): Switch to using the GitHub Super-Linter
https://github.com/marketplace/actions/super-linter

Running checks

ERROR_ON_MISSING_EXEC_BIT: true
VALIDATE_BASH: true
VALIDATE_BASH_EXEC: true
VALIDATE_EDITORCONFIG: true
VALIDATE_GO: true
VALIDATE_JAVA: true
VALIDATE_JSON: true
VALIDATE_LUA: true
VALIDATE_MARKDOWN: true
VALIDATE_PERL: true
VALIDATE_PYTHON: false
VALIDATE_PYTHON_BLACK: true
VALIDATE_PYTHON_FLAKE8: true
VALIDATE_PYTHON_ISORT: true
VALIDATE_PYTHON_MYPY: true
VALIDATE_PYTHON_PYLINT: true
VALIDATE_SHELL_SHFMT: true
VALIDATE_XML: true
VALIDATE_YAML: true

--- a/.github/workflows/misc-checker.yml
+++ b/.github/workflows/misc-checker.yml
@@ -1,14 +1,14 @@
-name: misc
+name: Misc
 on:
   pull_request:
     branches: [master]
 jobs:
   misc:
-    name: misc checker
+    name: Misc checker
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code.
-        uses: actions/checkout@v1
+      - name: Check out code
+        uses: actions/checkout@v2
       - name: Install
         run: |
           wget -O - -q https://git.io/misspell | sh -s -- -b .
@@ -18,3 +18,5 @@ jobs:
       - name: Merge conflict
         run: |
           grep "^<<<<<<< HEAD" $(git ls-files | grep -v "t/toolkit" | xargs) && exit 1 || true
+      - name: Check for trailing whitespace
+        run: "! git grep -EIn $'[ \t]+$' | grep -v 'received: '"
