--- a/.gitignore
+++ b/.gitignore
@@ -60,11 +60,23 @@ t/lib/dubbo-backend/dubbo-backend-provider/target/
 .idea/
 *.iml
 \.*
+!.editorconfig
 !.github/
 ci/openwhisk-utilities/
 !.gitmodules
-!.markdownlint.yml
-!.yamllint
+!.github/linters/.ecrc
+!.github/linters/.flake8
+!.github/linters/.golangci.yml
+!.github/linters/.luacheckrc
+!.github/linters/.isort.cfg
+!.github/linters/.markdown-lint.yml
+!.github/linters/.mypy.ini
+!.github/linters/.perlcriticrc
+!.github/linters/.python-black
+!.github/linters/.python-lint
+!.github/linters/sun_checks.xml
+!.github/linters/.yaml-lint.yml
+!super-linter.report/.keep
 /conf/apisix.yaml
 /conf/apisix-*.yaml
 /conf/config-*.yaml
