--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ t/lib/dubbo-backend/dubbo-backend-provider/target/
 \.*
 !.github/
 ci/openwhisk-utilities/
+!.editorconfig
 !.gitmodules
 !.markdownlint.yml
 !.yamllint
