etcd can use  etcd.debug = true open etcd debug info

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -192,7 +192,7 @@ etcd:
   tls:
     verify: true                  # whether to verify the etcd endpoint certificate when setup a TLS connection to etcd,
                                   # the default value is true, e.g. the certificate will be verified strictly.
-
+  debug: true                     # this debug print res_put
 # discovery:                      # service discovery center
 #   eureka:
 #     host:                       # it's possible to define multiple eureka hosts addresses of the same eureka cluster.
