--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -33,8 +33,8 @@ jobs:
       run: |
         pwd
         ls
-        ./apisix/utils/benchmark-ci.sh install_dependencies
-        ./apisix/utils/benchmark-ci.sh run_apisix
+        ~/apisix/utils/benchmark-ci.sh install_dependencies
+        ~/apisix/utils/benchmark-ci.sh run_apisix
 
     - name: run benchmark
       run: |
