--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,8 +12,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
-      - run: npm install -g markdownlint-cli@0.25.0
-      - run: markdownlint '**/*.md' --ignore node_modules
+      - run: npm install -g markdownlint-cli@0.26.0
+      - run: markdownlint '**/*.md' --ignore deps --ignore t/toolkit
   yamllint:
     name: 🍺 YAML
     runs-on: ubuntu-latest
