--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -30,9 +30,12 @@
 # And then run `export ETCD_HOST=$your_host` before `make init`.
 #
 # If the configured environment variable can't be found, an error will be thrown.
-
-dns_resolver:
-  - 10.96.0.10      # default coreDNS cluster ip
-etcd:
-  host:
-    - "http://etcd-cluster-client.default.svc.cluster.local:2379"     # multiple etcd address
+apisix:
+  admin_key:
+    -
+      name: "admin"
+      # yamllint disable rule:comments-indentation
+      key: edd1c9f034335f136f87ad84b625c8f1  # using fixed API token has security risk, please
+                                             # update it when you deploy to production environment
+      # yamllint enable rule:comments-indentation
+      role: admin
