--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -1,5 +1,41 @@
-dns_resolver:
-  - 10.96.0.10
-etcd:
-  host:
-    - "http://etcd-cluster-client.default.svc.cluster.local:2379"
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# If you want to set the specified configuration value, you can set the new
+# in this file. For example if you want to specify the etcd address:
+#
+# etcd:
+#     host:
+#       - "http://127.0.0.1:2379"
+#
+# To configure via environment variables, you can use `${{VAR}}` syntax. For instance:
+#
+# etcd:
+#     host:
+#       - "http://${{ETCD_HOST}}:2379"
+#
+# And then run `export ETCD_HOST=$your_host` before `make init`.
+#
+# If the configured environment variable can't be found, an error will be thrown.
+apisix:
+  admin_key:
+    - name: "admin"
+      # yamllint disable rule:comments-indentation
+      key:
+        edd1c9f034335f136f87ad84b625c8f1 # using fixed API token has security risk, please
+        # update it when you deploy to production environment
+      # yamllint enable rule:comments-indentation
+      role: admin
