--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -1,6 +1,6 @@
 name: Chaos Test
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Creating minikube cluster
         run: |
-          bash ./t/chaos/utils.sh startMinikube
+          bash ./t/chaos/utils.sh start_minikube
 
       - name: Print cluster information
         run: |
@@ -28,29 +28,20 @@ jobs:
       - name: Deploy Etcd Operator
         run: |
           git clone https://github.com/yiyiyimu/etcd-operator.git --depth 1
-          cd etcd-operator
-          bash example/rbac/create_role.sh
-          kubectl create -f example/deployment.yaml
-          bash ./t/chaos/utils.sh ensure_pods_ready etcd-operator "True"
-          kubectl create -f example/example-etcd-cluster.yaml
-          bash ./t/chaos/utils.sh ensure_pods_ready etcd "True True True"
+          bash etcd-operator/example/rbac/create_role.sh
+          kubectl create -f etcd-operator/example/deployment.yaml
+          bash ./t/chaos/utils.sh ensure_pods_ready etcd-operator "True" 30
+          kubectl create -f etcd-operator/example/example-etcd-cluster.yaml
+          bash ./t/chaos/utils.sh ensure_pods_ready etcd "True True True" 30
 
-      - uses: actions/checkout@v2
       - name: Deploy APISIX
         run: |
-          DNS_IP=$(kubectl get svc -n kube-system -l k8s-app=kube-dns -o 'jsonpath={..spec.clusterIP}')
-          echo "
-          dns_resolver:
-            - ${DNS_IP}
-          etcd:
-            host:
-              - "http://etcd-cluster-client.default.svc.cluster.local:2379"
-          " > conf/config.yaml
-          example/rbac/create_role.sh
-          kubectl create configmap apisix-gw-config.yaml --from-file=../conf/config.yaml
-          kubectl apply -f deployment.yaml
-          kubectl apply -f service.yaml
-          while [[ $(kubectl get pods -l app=apisix-gw -o 'jsonpath={..status.conditions[?(@.type=="Ready")].status}') != "True True" ]]; do echo "Waiting for pod running" && sleep 10; done
+          bash ./t/chaos/utils.sh modify_config
+          kubectl create configmap apisix-gw-config.yaml --from-file=./conf/config.yaml
+          kubectl apply -f ./kubernetes/deployment.yaml
+          kubectl apply -f ./kubernetes/service.yaml
+          bash ./t/chaos/utils.sh ensure_pods_ready apisix-gw "True" 30
+          nohup kubectl port-forward svc/apisix-gw-lb 9080:9080 >/dev/null 2>&1 &
 
       - name: Deploy Chaos mesh
         run: |
