--- a/t/chaos/kill-etcd.yaml
+++ b/t/chaos/kill-etcd.yaml
@@ -19,11 +19,11 @@ apiVersion: chaos-mesh.org/v1alpha1
 kind: PodChaos
 metadata:
   name: kill-etcd
-  namespace: chaos-testing
 spec:
   action: pod-kill
   mode: all
-  value: ""
   selector:
     labelSelectors:
       "app": "etcd"
+  scheduler:
+      cron: "@every 10m"
