--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -259,6 +259,7 @@ plugins:                          # plugin list (sorted in alphabetical order)
   - udp-logger
   - uri-blocker
   - wolf-rbac
+  - web-hook
   - zipkin
   - server-info
   - traffic-split
