--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,7 +57,7 @@ jobs:
         # if: ${{ github.ref != "refs/heads/master" && ! endsWith(matrix.os_name, "luarocks") }}
         run: |
           export VERSION=${GITHUB_REF#refs/heads/}
-          RELEASE_SRC=apache-apisix-${VERSION}-src
+          export RELEASE_SRC=apache-apisix-${VERSION}-src
           make compress-tar
           # mv release/$(RELEASE_SRC).tgz $(RELEASE_SRC).tgz
 
@@ -65,7 +65,7 @@ jobs:
         # if: ${{ github.ref != "refs/heads/master" && ! endsWith(matrix.os_name, "luarocks") }}
         run: |
           rm -rf $(ls -1 --ignore=*.tgz --ignore=.travis --ignore=t --ignore=utils --ignore=.github)
-          tar zxvf apache-apisix-${VERSION}-src.tgz
+          tar zxvf $(RELEASE_SRC).tgz
 
       - name: Linux Get dependencies
         run: sudo apt install -y cpanminus build-essential libncurses5-dev libreadline-dev libssl-dev perl
