--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,14 +59,13 @@ jobs:
           export VERSION=${GITHUB_REF#refs/heads/}
           export RELEASE_SRC=apache-apisix-${VERSION}-src
           make compress-tar
-          # mv release/$(RELEASE_SRC).tgz $(RELEASE_SRC).tgz
+          # mv release/${RELEASE_SRC}.tgz ${RELEASE_SRC}.tgz
 
       - name: Remove everything except tarball/.travis/t
         # if: ${{ github.ref != "refs/heads/master" && ! endsWith(matrix.os_name, "luarocks") }}
         run: |
-          export RELEASE_SRC=apache-apisix-${GITHUB_REF#refs/heads/}-src
           rm -rf $(ls -1 --ignore=*.tgz --ignore=.travis --ignore=t --ignore=utils --ignore=.github)
-          tar zxvf $(RELEASE_SRC).tgz
+          tar zxvf ${RELEASE_SRC}.tgz
           ls
 
       - name: Linux Get dependencies
