--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -31,15 +31,22 @@ jobs:
 
     - name: install apisix
       run: |
-        pwd
         ls
+        wget -qO - https://openresty.org/package/pubkey.gpg | sudo apt-key add -
+        apt-get update
+        apt-get -y install software-properties-common
+        add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
+        apt-get update
+        apt-get install -y git openresty curl openresty-openssl-dev
+        ./utils/linux-install-luarocks.sh
+
         make init
         make deps
         make run
 
     - name: run upstream
       run: |
-        sudo openresty -c $PWD/t/fuzzing/upstream/nginx.conf
+        openresty -c $PWD/t/fuzzing/upstream/nginx.conf
 
     - name: install boofuzz
       run: |
