--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -38,7 +38,7 @@ jobs:
         sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
         sudo apt-get update
         sudo apt-get install -y git openresty curl openresty-openssl-dev
-        ./utils/linux-install-luarocks.sh
+        sudo ./utils/linux-install-luarocks.sh
 
         make init
         make deps
