--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -38,19 +38,19 @@ jobs:
         sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
         sudo apt-get update
         sudo apt-get install -y git openresty curl openresty-openssl-dev
-        
-        wget https://github.com/luarocks/luarocks/archive/v3.4.0.tar.gz \
-        tar -xf v3.4.0.tar.gz \
-        cd luarocks-3.4.0 || exit \
-        ./configure --with-lua=/usr/local/openresty/luajit > build.log 2>&1 || (cat build.log && exit 1) \
-        make build > build.log 2>&1 || (cat build.log && exit 1) \
-        make install > build.log 2>&1 || (cat build.log && exit 1) \
-        cd .. || exit \
-        rm -rf luarocks-3.4.0 \
-        mkdir ~/.luarocks || true \
-        luarocks config variables.OPENSSL_LIBDIR /usr/local/openresty/openssl/lib \
+
+        wget https://github.com/luarocks/luarocks/archive/v3.4.0.tar.gz
+        tar -xf v3.4.0.tar.gz
+        cd luarocks-3.4.0 || exit
+        ./configure --with-lua=/usr/local/openresty/luajit > build.log 2>&1 || (cat build.log && exit 1)
+        make build > build.log 2>&1 || (cat build.log && exit 1)
+        make install > build.log 2>&1 || (cat build.log && exit 1)
+        cd .. || exit
+        rm -rf luarocks-3.4.0
+        mkdir ~/.luarocks || true
+        luarocks config variables.OPENSSL_LIBDIR /usr/local/openresty/openssl/lib
         luarocks config variables.OPENSSL_INCDIR /usr/local/openresty/openssl/include
-        
+
         make deps
         make init
         make run
