--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -37,21 +37,11 @@ jobs:
         sudo apt-get -y install software-properties-common
         sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
         sudo apt-get update
-        sudo apt-get install -y git openresty curl openresty-openssl-dev
+        sudo apt-get install -y git openresty curl openresty-openssl-dev unzip make gcc
 
-        wget https://github.com/luarocks/luarocks/archive/v3.4.0.tar.gz
-        tar -xf v3.4.0.tar.gz
-        cd luarocks-3.4.0 || exit
-        sudo ./configure --with-lua=/usr/local/openresty/luajit > build.log 2>&1 || (cat build.log && exit 1)
-        sudo make build > build.log 2>&1 || (cat build.log && exit 1)
-        sudo make install > build.log 2>&1 || (cat build.log && exit 1)
-        cd .. || exit
-        sudo rm -rf luarocks-3.4.0
-        mkdir ~/.luarocks || true
-        sudo luarocks config variables.OPENSSL_LIBDIR /usr/local/openresty/openssl/lib
-        sudo luarocks config variables.OPENSSL_INCDIR /usr/local/openresty/openssl/include
+        ./utils/linux-install-luarocks.sh
 
-        make deps
+        sudo make deps
         make init
         make run
 
