--- a/.gitignore
+++ b/.gitignore
@@ -44,29 +44,34 @@ luac.out
 *.pid
 t/servroot
 go
+conf/apisix.uid
+conf/nginx.conf
 deps
-*_temp
+scgi_temp
+uwsgi_temp
+proxy_temp
+fastcgi_temp
+client_body_temp
 utils/lj-releng
 utils/reindex
 default.etcd/
 t/lib/dubbo-backend/dubbo-backend-interface/target/
 t/lib/dubbo-backend/dubbo-backend-provider/target/
+.idea/
 *.iml
-.*
+\.*
 !.github/
 !.travis/
 .travis/openwhisk-utilities/
 !.gitmodules
 !.markdownlint.yml
 !.yamllint
-conf/apisix.uid
-conf/nginx.conf
-conf/apisix.yaml
-conf/apisix-*.yaml
-conf/config-*.yaml
-!conf/config-default.yaml
-conf/debug-*.yaml
-build-cache/
+/conf/apisix.yaml
+/conf/apisix-*.yaml
+/conf/config-*.yaml
+!/conf/config-default.yaml
+/conf/debug-*.yaml
+/build-cache/
 
 # release tar package
 *.tgz
