fix publish artifact error
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,4 +131,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: release-package-${{ matrix.os_name }}
-          path: apache-apisix-${VERSION}-src.tgz
+          path: apache-apisix-${GITHUB_REF##*/}-src.tgz
