--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,21 +53,28 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Extract branch name
+        id: branch_env
+        shell: bash
+        run: |
+          export VERSION=${GITHUB_REF##*/}
+          echo "##[set-output name=version;]$(echo ${VERSION:1})"
+          echo "##[set-output name=fullname;]$(echo apache-apisix-${VERSION:1}-src.tgz)"
+
       - name: Create tarball
         # if: ${{ github.ref != "refs/heads/master" && ! endsWith(matrix.os_name, "luarocks") }}
         run: |
-          export VERSION=${GITHUB_REF##*/}
-          export RELEASE_SRC=apache-apisix-${VERSION}-src
+          export VERSION=${{ steps.branch_env.outputs.version }}
+          export RELEASE_SRC=${{ steps.branch_env.outputs.fullname }}
           make compress-tar
-          mv release/${RELEASE_SRC}.tgz ${RELEASE_SRC}.tgz
+          mv release/${RELEASE_SRC} ${RELEASE_SRC}
           ls
 
       - name: Remove everything except tarball/.travis/t
         # if: ${{ github.ref != "refs/heads/master" && ! endsWith(matrix.os_name, "luarocks") }}
         run: |
-          export RELEASE_SRC=apache-apisix-${GITHUB_REF##*/}-src
           rm -rf $(ls -1 --ignore=*.tgz --ignore=.travis --ignore=t --ignore=utils --ignore=.github)
-          tar zxvf ${RELEASE_SRC}.tgz
+          tar zxvf ${{ steps.branch_env.outputs.fullname }}
           ls
 
       - name: Linux Get dependencies
@@ -131,4 +138,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: release-package-${{ matrix.os_name }}
-          path: apache-apisix-${GITHUB_REF##*/}-src.tgz
+          path: ${{ steps.branch_env.outputs.fullname }}
