make it only work for release
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,20 +62,17 @@ jobs:
           echo "##[set-output name=fullname;]$(echo apache-apisix-${VERSION:1}-src.tgz)"
 
       - name: Create tarball
-        # if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
+        if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
         run: |
           export VERSION=${{ steps.branch_env.outputs.version }}
           export RELEASE_SRC=${{ steps.branch_env.outputs.fullname }}
           make compress-tar
-          # mv release/${RELEASE_SRC} ${RELEASE_SRC}
-          ls
 
       - name: Remove everything except tarball/.travis/t
-        # if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
+        if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
         run: |
           rm -rf $(ls -1 --ignore=*.tgz --ignore=.travis --ignore=t --ignore=utils --ignore=.github)
           tar zxvf ${{ steps.branch_env.outputs.fullname }}
-          ls
 
       - name: Linux Get dependencies
         run: sudo apt install -y cpanminus build-essential libncurses5-dev libreadline-dev libssl-dev perl
@@ -134,7 +131,7 @@ jobs:
         run: sudo ./.travis/${{ matrix.os_name }}_runner.sh script
 
       - name: Publish Artifact
-        # if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
+        if: ${{ startsWith(github.ref, 'refs/heads/v') && !endsWith(matrix.os_name, 'luarocks') }}
         uses: actions/upload-artifact@v1
         with:
           name: release-package-${{ matrix.os_name }}
