--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,7 +131,7 @@ jobs:
         run: sudo ./.travis/${{ matrix.os_name }}_runner.sh script
 
       - name: Publish Artifact
-        if: ${{ startsWith(github.ref, 'refs/heads/v') && endsWith(matrix.os_name, 'linux_openresty') }}
+        if: ${{ startsWith(github.ref, 'refs/heads/v') && matrix.os_name == 'linux_openresty') }}
         uses: actions/upload-artifact@v1
         with:
           name: release-package-${{ matrix.os_name }}
