--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -54,4 +54,6 @@ jobs:
 
     - name: run test
       run: |
+        ps -ef | grep nginx
         python $PWD/t/fuzzing/route_test.py
+        ps -ef | grep nginx
