--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -37,10 +37,9 @@ jobs:
         sudo add-apt-repository -y "deb http://openresty.org/package/ubuntu $(lsb_release -sc) main"
         sudo apt-get update
         sudo apt-get install -y git openresty curl openresty-openssl-dev unzip make gcc
+        ./utils/linux-install-luarocks.sh
 
-        sudo ./utils/linux-install-luarocks.sh
-
-        sudo make deps
+        make deps
         make init
         make run
 
