revert to fix error
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,17 +53,24 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Extract branch name
+        id: branch_env
+        shell: bash
+        run: |
+          echo "##[set-output name=version;]$(echo ${GITHUB_REF##*/})"
+          echo "##[set-output name=fullname;]$(echo apache-apisix-${GITHUB_REF##*/}-src.tgz)"
+
       - name: Create tarball
         # if: ${{ startsWith(github.ref, 'refs/heads/release/') && !endsWith(matrix.os_name, 'luarocks') }}
         run: |
-          export VERSION=${GITHUB_REF##*/}
+          export VERSION=${{ steps.branch_env.outputs.version }}
           make compress-tar
 
       - name: Remove source code
         # if: ${{ startsWith(github.ref, 'refs/heads/release/') && !endsWith(matrix.os_name, 'luarocks') }}
         run: |
           rm -rf $(ls -1 --ignore=*.tgz --ignore=.travis --ignore=t --ignore=utils --ignore=.github)
-          tar zxvf apache-apisix-${GITHUB_REF##*/}-src.tgz
+          tar zxvf ${{ steps.branch_env.outputs.fullname }}
 
       - name: Linux Get dependencies
         run: sudo apt install -y cpanminus build-essential libncurses5-dev libreadline-dev libssl-dev perl
@@ -126,5 +133,5 @@ jobs:
         if: ${{ matrix.os_name == 'linux_openresty' }}
         uses: actions/upload-artifact@v1
         with:
-          name: apache-apisix-${GITHUB_REF##*/}-src.tgz
-          path: apache-apisix-${GITHUB_REF##*/}-src.tgz
+          name: ${{ steps.branch_env.outputs.fullname }}
+          path: ${{ steps.branch_env.outputs.fullname }}
