--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -54,3 +54,8 @@ jobs:
     - name: run test
       run: |
         python $PWD/t/fuzzing/route_test.py
+
+    - name: echo test log
+      # more than 150k lines, so only display the last log, actually, this step is not needed. 
+      run: |
+        tail -n 300 $PWD/t/fuzzing/test.log
