--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -29,7 +29,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: install apisix
+    - name: run apisix
       run: |
         wget -qO - https://openresty.org/package/pubkey.gpg | sudo apt-key add -
         sudo apt-get update
