--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [master, release/*]
+    branches: [master, 'release/**']
   pull_request:
     branches: [master]
 
