refactor: clean up GitHub workflow YAML files
- Capitalize first word of `name`
- Remove unneeded full stop
- Remove extra blank line

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Build
     strategy:
       fail-fast: false
       matrix:
@@ -26,7 +27,6 @@ jobs:
     env:
       SERVER_NAME: ${{ matrix.os_name }}
       OPENRESTY_VERSION: default
-
 
     services:
       etcd:
