--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -29,6 +29,15 @@ jobs:
       with:
         submodules: recursive
 
+    - name: Build rpm package
+      run: |
+        sudo gem install --no-document fpm
+        # WOULD CHANGE TO MASTER WHEN PR GOT MERGED
+        git clone https://github.com/idbeta/build-tools.git
+        cd build-tools
+        git checkout new-method-to-package
+        make package type=rpm app=apisix version=2.3 branch=2.3
+
     - name: Install Redis Cluster
       run: |
         docker run -d -p ${MASTER1_PORT}:6379 -p ${MASTER2_PORT}:6380 -p ${MASTER3_PORT}:6381 -p ${SLAVE1_PORT}:6382 -p ${SLAVE2_PORT}:6383 -p ${SLAVE3_PORT}:6384 --name redis-cluster vishnunair/docker-redis-cluster:latest
@@ -83,6 +92,17 @@ jobs:
         docker exec centos7Instance bash -c "cp -r /tmp/apisix ./"
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh install_dependencies"
 
+    - name: Install rpm package
+      run: |
+        rm -rf $(ls -1 --ignore=build-tools --ignore=t --ignore=utils)
+        docker exec centos7Instance bash -c "rpm -iv --prefix=./ ./build-tools/outputs/*.rpm"
+
     - name: run test cases
       run: |
         docker exec centos7Instance bash -c "cd apisix && ./utils/centos7-ci.sh run_case"
+
+    - name: Publish Artifact
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: "rpm"
+        path: "rpm"
